[gd_scene load_steps=8 format=3 uid="uid://c1y65wq6p7snw"]

[ext_resource type="PackedScene" uid="uid://cos54k7w1dq8u" path="res://assets/prefabs/world/ground/leaves/leaf_test_ground.tscn" id="1_colpn"]
[ext_resource type="Script" path="res://assets/scenes/hub.gd" id="1_qxbdx"]
[ext_resource type="PackedScene" uid="uid://dsqiq7gm4enbm" path="res://assets/prefabs/parallax_background.tscn" id="3_twe63"]

[sub_resource type="Animation" id="Animation_vcpnt"]
resource_name = "fade_in_portraits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/Tree/Portraits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fu66x"]
resource_name = "fade_out_portraits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ParallaxBackground/Tree/Portraits:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qixcy"]
_data = {
"fade_in_portraits": SubResource("Animation_vcpnt"),
"fade_out_portraits": SubResource("Animation_fu66x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c24vl"]
size = Vector2(866, 466)

[node name="hub" type="Node2D"]
script = ExtResource("1_qxbdx")

[node name="walls" type="Node2D" parent="."]

[node name="Floor" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(0, -64)

[node name="Floor13" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4096, -64)

[node name="Floor14" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4672, -512)
rotation = 1.5708

[node name="Floor15" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4672, -1024)
rotation = 1.5708

[node name="Floor33" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1984, -1600)
rotation = 1.5708

[node name="Floor34" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1984, -2112)
rotation = 1.5708

[node name="Floor36" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1984, -2560)
rotation = 1.5708

[node name="Floor31" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1984, -1088)
rotation = 1.5708

[node name="Floor16" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4672, -1536)
rotation = 1.5708

[node name="Floor17" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4672, -2048)
rotation = 1.5708

[node name="Floor18" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4672, -2560)
rotation = 1.5708

[node name="Floor19" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1984, -576)
rotation = 1.5708

[node name="Floor2" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(512, -64)

[node name="Floor3" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(1024, -64)

[node name="Floor4" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(1536, -64)

[node name="Floor5" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(2048, -64)

[node name="Floor6" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(2560, -64)

[node name="Floor7" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(3072, -64)

[node name="Floor8" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(3584, -64)

[node name="Floor9" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-2048, -64)

[node name="Floor10" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1536, -64)

[node name="Floor32" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(512, -2560)

[node name="Floor11" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1024, -64)

[node name="Floor12" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-512, -64)

[node name="Floor20" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(1024, -2560)

[node name="Floor21" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(1536, -2560)

[node name="Floor22" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(2048, -2560)

[node name="Floor23" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(2560, -2560)

[node name="Floor24" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(3072, -2560)

[node name="Floor25" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(3584, -2560)

[node name="Floor26" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(4096, -2560)

[node name="Floor27" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1536, -2560)

[node name="Floor35" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-2048, -2560)

[node name="Floor28" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-1024, -2560)

[node name="Floor29" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(-512, -2560)

[node name="Floor30" parent="walls" instance=ExtResource("1_colpn")]
position = Vector2(0, -2560)

[node name="ParallaxBackground" parent="." instance=ExtResource("3_twe63")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qixcy")
}

[node name="portrait_trigger" type="Area2D" parent="."]
position = Vector2(0, -85)

[node name="CollisionShape2D" type="CollisionShape2D" parent="portrait_trigger"]
position = Vector2(1800, -275)
shape = SubResource("RectangleShape2D_c24vl")

[connection signal="body_entered" from="portrait_trigger" to="." method="_on_portrait_trigger_body_entered"]
[connection signal="body_exited" from="portrait_trigger" to="." method="_on_portrait_trigger_body_exited"]
